# py_selenium_declarative

./: CHANGELOG.md  CHANGES.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  static.yml
docs/: example.md  index.md  installation.md  operation.md  suite.md  usage.md
examples/: google_for_hello_world.json
py_selenium_declarative/: __init__.py  __main__.py  cli.py  constants.py  driver_utils.py  runner.py  validator.py
py_selenium_declarative/files/: suite.json
py_selenium_declarative/model/: operation.py  suite.py
tests/: test_runner.py  test_validator.py
