[tool.poetry]
name = "py-selenium-declarative"
version = "0.1.0"
description = ""
authors = ["Harsha Sridhar <sridharsha598@gmail.com>"]
readme = "README.md"
packages = [{ include = "py_selenium_declarative" }]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.10.0"
typer = "^0.9.0"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.19"
jsonschema = "^4.18.4"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
psd = "py_selenium_declarative.__main__:main"
